configured strapi into the project and fixed nav on tablet devices

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -4,11 +4,11 @@
             margin: 0 55px;
       }
       .email h4 {
-            font-size: 20px;
+            font-size: 15px;
             font-weight: 700;
       }
       .phone-number h4 {
-            font-size: 20px;
+            font-size: 15px;
             font-weight: 700;
       }
       .ant-menu .ant-menu-item a {
@@ -42,6 +42,9 @@
 }
 
 @media only screen and (min-width: 1025px) and (max-width: 1400px) {
+      .navigation .ant-menu-vertical .ant-menu-item {
+            padding: 0 0 0 45px;
+      }
       .nav-items a {
             font-family: sans-serif;
             font-size: 14px;
@@ -52,11 +55,11 @@
             margin: 0 55px;
       }
       .email h4 {
-            font-size: 20px;
+            font-size: 15px;
             font-weight: 700;
       }
       .phone-number h4 {
-            font-size: 20px;
+            font-size: 15px;
             font-weight: 700;
       }
       .ant-menu .ant-menu-item a {
@@ -101,8 +104,11 @@
             font-weight: 700;
       }
       .ant-menu .ant-menu-item a {
-            font-size: 20px;
+            font-size: 17px;
             font-weight: 700;
+      }
+      .navigation .ant-menu-vertical .ant-menu-item {
+            padding: 0 0 0 40px;
       }
       .logo {
             width: 350px;
@@ -131,14 +137,17 @@
             margin: 0 45px;
       }
       .email h4 {
-            font-size: 22px;
+            font-size: 15px;
       }
       .phone-number h4 {
-            font-size: 22px;
+            font-size: 15px;
       }
       .ant-menu .ant-menu-item a {
-            font-size: 17px;
+            font-size: 18px;
             font-weight: 600;
+            /* margin-right: 14px; */
+
+            float: right;
       }
       .logo {
             width: 350px;
@@ -192,7 +201,7 @@
       }
       .btn-mobile-menu {
             display: block;
-            font-size: 30px;
+            font-size: 35px;
             position: relative;
             margin-left: 30px;
       }
@@ -210,7 +219,7 @@
             float: none;
       }
       .email h4 {
-            font-size: 18px;
+            font-size: 15px;
       }
       .phone-number h4 {
             font-size: 14px;
